--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat"
         tools:targetApi="31">
+        <activity android:name=".ui.views.LoginActivity" />
+        <activity android:name=".ui.views.RegisterActivity" />
         <activity
             android:name=".ui.views.MainActivity"
             android:exported="true"
