--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         android:theme="@style/Theme.AppCompat"
         tools:targetApi="31">
         <activity
-            android:name=".ui.views.EmptyActivity"
+            android:name=".ui.views.CelestialActivity"
             android:theme="@style/Theme.AppCompat" />
         <activity
             android:name=".ui.views.LoginActivity"
