--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,9 @@
             android:name=".ui.views.RegisterActivity"
             android:theme="@style/Theme.AppCompat" />
         <activity
+            android:name=".ui.views.AboutUsActivity"
+            android:theme="@style/Theme.AppCompat" />
+        <activity
             android:name=".ui.views.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.AppCompat">
