--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,11 +17,14 @@ converterGson = "2.3.0"
 glide = "4.12.0"
 cardview = "1.0.0"
 sceneformUx = "1.17.1"
+googleAi = "0.8.0"
+couroutines = "1.7.3"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 com-squareup-okhttp3-okhttp2 = { module = "com.squareup.okhttp3:okhttp", version.ref = "comSquareupOkhttp3Okhttp" }
 core = { module = "com.google.ar:core", version.ref = "core" }
+couroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "couroutines" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -36,8 +39,8 @@ converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
 androidx-cardview = { group = "androidx.cardview", name = "cardview", version.ref = "cardview" }
+googleAi = { module = "com.google.ai.client.generativeai:generativeai", version.ref = "googleAi" }
 sceneform-ux = { module = "com.google.ar.sceneform.ux:sceneform-ux", version.ref = "sceneformUx" }
-
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
